--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.C linguist-detectable=true
+*.c linguist-detectable=true
 *.java linguist-detectable=false
 *.python linguist-detectable=false
 *.css linguist-detectable=false
